# orocos_opensot_ik

./: CMakeLists.txt  README.md
config/: cogimon_example.yaml
include/: joystick_handler.h  opensot_ik.h  orocos_opensot_ik.h
launch/: joystick.launch
orocos_script/: .tb_history  cogimon_config.yaml  cogimon_opensot_ik.ops  cogimon_opensot_ik_walking.ops  cogimons_opensot_ik_walking.ops  xbot_orocos_rtt_motor_controller_test.ops
src/: joystick_handler.cpp  opensot_ik.cpp  orocos_opensot_ik.cpp  orocos_opensot_ik_log.cpp  orocos_opensot_ik_operations.cpp
